--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "A tool to visualize how different path finding algorithms works.",
   "main": "index.html",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nirzar Bhatt",
-  "license": "ISC",
-  "type": "module"
+  "license": "ISC"  
 }
